testsuite/tests/indexed-types/should_fail/T14887.stderr

T14887.hs:13:37: error:
    • Expected kind ‘k’, but ‘a’ has kind ‘k0’
    • In the first argument of ‘(:~:)’, namely ‘(a :: k)’
      In a compiler-generated top-level kind signature for ‘Foo2’:
        forall (k :: Type) -> (a :: k) :~: (a :: k) -> Type
